# encode

./: CMakeLists.txt  README.md
alpha684/: README.md
ascii85/: CMakeLists.txt  asc85.c  encode85.c  encode85.h  map85.pl
test/: CMakeLists.txt  test_asci.c
